# wallet

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-deb.yml  build-linux.yml  build-windows.yml
scripts/: clean-dist.js  esbuild.js
src/: App.css  App.tsx  main.tsx  types.ts  wallet-sync-sidecar.ts  walletAddresses.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BottomBar.tsx  DappBrowserPage.tsx  MidnightLogo.tsx  SettingsPage.tsx  SideMenu.tsx  WalletCreationModal.tsx  WalletDetailPage.tsx  WalletOverviewPage.tsx
src/sidecars/: dapp-connector.ts  tx-metadata.test.ts  tx-metadata.ts  wallet-cache.test.ts  wallet-cache.ts  wallet-sync.ts
